--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-redux-toastr": "^7.4.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
